# learnpython

./: .gitignore  README.md  about-1.json  about-2.json  about.json  arrays.json  basic-visualizations.json  config.json  data-structures.json  dataframes.json  demo-01-decision-tree-water-detection.json  demo-02-random-forest-land-cover-classification.json  environment-and-package-management.json  errors-and-exceptions.json  exercises-1.json  exercises-answers.json  exercises-day3.json  exercises-jbp.json  exercises.json  functions-classes-and-objects.json  getting-started.json  ide.json  index.html  iterations-and-comprehensions.json  lambda-map-filter.json  license.json  loops-and-conditionals.json  myst.search.json  myst.xref.json  myst.yml  notebooks.json  objects.inv  pyproject.toml  python-practice.json  readme.json  sitemap.xml  strings-and-ranges.json  tips-to-get-started.json  user-inputs-and-file-handling.json  variables-data-types-scope.json  (+2 more)
01 Before You Begin/: 00-about.md
01-Before-You-Begin/: 00-about.md  03-environment-and-package-management.md  04-version-control.md  06-notebooks.md
02 Essentials/: 00-about.md  01_getting_started.ipynb  02_variables_data_types_scope.ipynb  04_iterations_and_comprehensions.ipynb  06_lambda_map_filter.ipynb  08_loops_and_conditionals.ipynb  11_basic_visualizations.ipynb  99_exercises.ipynb
02-Essentials/: 01_getting_started.ipynb  05_functions_classes_and_objects.ipynb  07_strings_and_ranges.ipynb  09_user_inputs_and_file_handling.ipynb  10_errors_and_exceptions.ipynb  11_basic_visualizations.ipynb  brgy_population.txt
(+48 files in other folders)
